# RAGnalysis-API

./: .gitignore  .test_report.xml  README.md  api_demo.ipynb  experiment.ipynb  function_app.py  pyproject.toml  requirements.txt  setup.py  storage_api_demo.ipynb
.github/workflows/: deploy.yml  main_med-app.yml  unit_tests.yml
api/: app.py
app/: .test_report.xml  backend.py  function_app.py  host.json  requirements.txt  utils.py
function/: .funcignore  backend.py  function_app.py  requirements.txt  utils.py
function_app/: .funcignore  .test_report.xml  backend.py  function_app.py  requirements.txt  utils.py
function_app/tests/: unit_test.py
functions/: llama.py
tests/: unit_test.py
