[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragnalysis-client"
description = "Wrapper around the RAGnalysis API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
